--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,19 +1,235 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.example.admin.tp10android.MainActivity">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    tools:context="com.example.admin.tp10android.MainActivity"
+    android:columnCount="4"
+    android:rowCount="9"
+    android:alignmentMode="alignBounds"
+
+    >
+
+    <ImageView
+
+        android:id="@+id/logoDepot4"
+        android:layout_column="0"
+        android:layout_row="0"
+
+        android:src="@drawable/fleche_depot"
+        android:background="#00CF00"
+        android:layout_height="50dp"
+        android:layout_width="90dp"
+        />
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Hello World!"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:id="@+id/textViewDepot4"
+        android:layout_width="300dp"
+        android:layout_height="50dp"
+        android:layout_columnSpan="3"
+        android:layout_gravity="left"
+        android:layout_column="1"
+        android:layout_row="0"
+        android:text=""
+        android:background="#00CF00"
+        />
+    <ImageView
 
-</android.support.constraint.ConstraintLayout>
+        android:id="@+id/logoDepot3"
+        android:layout_column="0"
+        android:layout_row="1"
+
+        android:src="@drawable/fleche_depot"
+        android:background="#00CF00"
+        android:layout_height="50dp"
+        android:layout_width="90dp"
+        />
+
+    <TextView
+        android:id="@+id/textViewDepot3"
+        android:layout_width="300dp"
+        android:layout_height="50dp"
+        android:layout_column="1"
+        android:layout_columnSpan="3"
+        android:layout_row="1"
+        android:text=""
+        android:background="#00CF00" />
+
+
+    <ImageView
+
+        android:id="@+id/logoDepot2"
+        android:layout_column="0"
+        android:layout_row="2"
+
+        android:src="@drawable/fleche_depot"
+        android:background="#00CF00"
+        android:layout_height="50dp"
+        android:layout_width="90dp"
+        />
+    <TextView
+        android:id="@+id/textViewDepot2"
+        android:layout_width="300dp"
+        android:layout_height="50dp"
+        android:layout_column="1"
+        android:layout_columnSpan="3"
+        android:layout_row="2"
+        android:text=""
+        android:background="#00CF00" />
+    <ImageView
+
+        android:id="@+id/logoDepot1"
+        android:layout_column="0"
+        android:layout_row="3"
+
+        android:src="@drawable/fleche_depot"
+        android:background="#00CF00"
+        android:layout_height="50dp"
+        android:layout_width="90dp"
+        />
+    <TextView
+        android:id="@+id/textViewDepot1"
+        android:layout_width="300dp"
+        android:layout_height="50dp"
+        android:layout_column="1"
+        android:layout_columnSpan="3"
+        android:layout_row="3"
+        android:text=""
+        android:background="#00CF00"/>
+    <ImageView
+
+        android:id="@+id/logoResult"
+        android:layout_column="0"
+        android:layout_row="4"
+
+        android:src="@drawable/stylo"
+        android:layout_height="50dp"
+        android:layout_width="90dp"
+        android:background="#CCCCCC"
+        />
+    <TextView
+        android:id="@+id/textViewResulta"
+        android:layout_width="300dp"
+        android:layout_height="50dp"
+        android:layout_row="4"
+        android:text=""
+        android:layout_columnSpan="3"
+        android:layout_column="1"
+        android:background="#CCCCCC"
+        />
+
+    <Button
+        android:id="@+id/bouton1"
+        android:text="1"
+        android:layout_row="5"
+        android:layout_column="0"
+        />
+    <Button
+        android:id="@+id/bouton2"
+        android:text="2"
+        android:layout_row="5"
+        android:layout_column="1"
+        />
+    <Button
+        android:id="@+id/Bouton3"
+        android:text="3"
+        android:layout_row="5"
+        android:layout_column="2"
+        />
+    <Button
+        android:id="@+id/boutonplus"
+        android:text="+"
+        android:layout_row="5"
+        android:layout_column="3"
+        android:background="#01B0F0"
+        android:layout_width="120dp"
+        />
+    <Button
+        android:id="@+id/bouton4"
+        android:text="4"
+        android:layout_row="6"
+        android:layout_column="0"
+        />
+    <Button
+        android:id="@+id/bouton5"
+        android:text="5"
+        android:layout_row="6"
+        android:layout_column="1"
+        />
+    <Button
+        android:id="@+id/bouton6"
+        android:text="6"
+        android:layout_row="6"
+        android:layout_column="2"
+        />
+    <Button
+        android:id="@+id/boutonmoins"
+        android:text="-"
+        android:layout_row="6"
+        android:layout_column="3"
+        android:background="#01B0F0"
+        android:layout_width="120dp"
+        />
+    <Button
+        android:id="@+id/bouton7"
+        android:text="7"
+        android:layout_row="7"
+        android:layout_column="0"
+        />
+    <Button
+        android:id="@+id/bouton8"
+        android:text="8"
+        android:layout_row="7"
+        android:layout_column="1"
+        />
+    <Button
+        android:id="@+id/bouton9"
+        android:text="9"
+        android:layout_row="7"
+        android:layout_column="2"
+        />
+    <Button
+        android:id="@+id/boutondiviser"
+        android:text="/"
+        android:layout_row="7"
+        android:layout_column="3"
+        android:background="#01B0F0"
+        android:layout_width="120dp"
+
+        />
+    <Button
+        android:id="@+id/boutonclear"
+        android:text="Clear"
+        android:layout_row="8"
+        android:layout_column="0"
+        android:background="#01B0F0"
+        android:layout_width="90dp"
+        />
+
+    <Button
+        android:id="@+id/boutonpop"
+        android:text="POP"
+        android:layout_row="8"
+        android:layout_column="1"
+        android:background="#01B0F0"
+        android:layout_width="90dp"
+
+        />
+    <Button
+        android:id="@+id/boutonswap"
+        android:text="SWAP"
+        android:layout_row="8"
+        android:layout_column="2"
+        android:background="#01B0F0"
+        android:layout_width="90dp"
+        />
+    <Button
+        android:id="@+id/boutonenter"
+        android:text="ENTER"
+        android:layout_row="8"
+        android:layout_column="3"
+        android:background="#C03000"
+        android:layout_width="120dp"
+        />
+</GridLayout>
