--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,7 @@
         android:layout_gravity="left"
         android:layout_column="1"
         android:layout_row="0"
-        android:text=""
+        android:text=" "
         android:background="#00CF00"
         />
     <ImageView
@@ -53,7 +53,7 @@
         android:layout_column="1"
         android:layout_columnSpan="3"
         android:layout_row="1"
-        android:text=""
+        android:text=" "
         android:background="#00CF00" />
 
 
@@ -75,7 +75,7 @@
         android:layout_column="1"
         android:layout_columnSpan="3"
         android:layout_row="2"
-        android:text=""
+        android:text=" "
         android:background="#00CF00" />
     <ImageView
 
@@ -95,7 +95,7 @@
         android:layout_column="1"
         android:layout_columnSpan="3"
         android:layout_row="3"
-        android:text=""
+        android:text=" "
         android:background="#00CF00"/>
     <ImageView
 
@@ -109,7 +109,7 @@
         android:background="#CCCCCC"
         />
     <TextView
-        android:id="@+id/textViewResulta"
+        android:id="@+id/textViewResultat"
         android:layout_width="300dp"
         android:layout_height="50dp"
         android:layout_row="4"
@@ -124,18 +124,21 @@
         android:text="1"
         android:layout_row="5"
         android:layout_column="0"
+        android:onClick="clickbouton1"
         />
     <Button
         android:id="@+id/bouton2"
         android:text="2"
         android:layout_row="5"
         android:layout_column="1"
+        android:onClick="clickbouton2"
         />
     <Button
         android:id="@+id/Bouton3"
         android:text="3"
         android:layout_row="5"
         android:layout_column="2"
+        android:onClick="clickbouton3"
         />
     <Button
         android:id="@+id/boutonplus"
@@ -144,24 +147,28 @@
         android:layout_column="3"
         android:background="#01B0F0"
         android:layout_width="120dp"
+        android:onClick="clickboutonplus"
         />
     <Button
         android:id="@+id/bouton4"
         android:text="4"
         android:layout_row="6"
         android:layout_column="0"
+        android:onClick="clickbouton4"
         />
     <Button
         android:id="@+id/bouton5"
         android:text="5"
         android:layout_row="6"
         android:layout_column="1"
+        android:onClick="clickbouton5"
         />
     <Button
         android:id="@+id/bouton6"
         android:text="6"
         android:layout_row="6"
         android:layout_column="2"
+        android:onClick="clickbouton6"
         />
     <Button
         android:id="@+id/boutonmoins"
@@ -170,24 +177,28 @@
         android:layout_column="3"
         android:background="#01B0F0"
         android:layout_width="120dp"
+        android:onClick="clickboutonmoins"
         />
     <Button
         android:id="@+id/bouton7"
         android:text="7"
         android:layout_row="7"
         android:layout_column="0"
+        android:onClick="clickbouton7"
         />
     <Button
         android:id="@+id/bouton8"
         android:text="8"
         android:layout_row="7"
         android:layout_column="1"
+        android:onClick="clickbouton8"
         />
     <Button
         android:id="@+id/bouton9"
         android:text="9"
         android:layout_row="7"
         android:layout_column="2"
+        android:onClick="clickbouton9"
         />
     <Button
         android:id="@+id/boutondiviser"
@@ -196,6 +207,7 @@
         android:layout_column="3"
         android:background="#01B0F0"
         android:layout_width="120dp"
+        android:onClick="clickboutondiviser"
 
         />
     <Button
@@ -205,6 +217,7 @@
         android:layout_column="0"
         android:background="#01B0F0"
         android:layout_width="90dp"
+        android:onClick="clickboutonclear"
         />
 
     <Button
@@ -214,6 +227,7 @@
         android:layout_column="1"
         android:background="#01B0F0"
         android:layout_width="90dp"
+        android:onClick="clickboutonpop"
 
         />
     <Button
@@ -223,6 +237,7 @@
         android:layout_column="2"
         android:background="#01B0F0"
         android:layout_width="90dp"
+        android:onClick="clickboutonswap"
         />
     <Button
         android:id="@+id/boutonenter"
@@ -231,5 +246,6 @@
         android:layout_column="3"
         android:background="#C03000"
         android:layout_width="120dp"
+        android:onClick="clickboutonenter"
         />
 </GridLayout>
